# MCPDocSearch

./: .dockerignore  .gitattributes  Dockerfile  fly.toml  pyproject.toml  run_stdio_server.sh
.cursor/: mcp.json
mcp_server/: app.py  data_loader.py  main.py
